<resources>
    <string name="app_name">Fatec Library</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_settings">Settings</string>
    <string name="btentrar">Entrar</string>
    <string name="btlistarTodos">Listar Todos Usuarios</string>
    <string name="btlistarParam">Listar Usuarios por Parametros</string>
    <string name="btpesquisar">Pesquisar Usuario</string>

    <string name="btinserir">Inserir</string>
    <string name="btalterar">Alterar</string>
    <string name="btexcluir">Excluir</string>
    <string name="btnovousu">Novo Usuario</string>
    <string name="btnovolivro">Novo Livro</string>
    <string name="btsalvar">Salvar</string>
    <string name="lblogin">Login</string>
    <string name="lbsenha">Senha</string>
    <string name="lbtipo">Tipo</string>
    <string name="lbstatus">Status</string>
    <string name="lbid">Id</string>
    <string name="lbusuariologado">Usuario Logado</string>

    //livros
    <string name="lbtitulo">Titulo</string>
    <string name="lbautor">Autor</string>
    <string name="lbeditora">Editora</string>
    <string name="lbgenero">Genero</string>
    <string name="lbdepartamento">Departamento</string>
    <string name="lbtelefone">Telefone</string>
    <string name="lbemail">Email</string>
    <string name="btinserirLivro">Inserir Livro</string>
    <string name="btpesquisarLivros">Pesquisar Livros</string>
    <string name="btlistarParamLivros">Buscar Livros por Título</string>
    <string name="btlistarTodosLivros">Listar Todos os Livros</string>
    <string name="lbvazio1"></string>
    <string name="lbvazio2"></string>
    <string name="title_activity_add_usu">AddUsuActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_list_usu">ListUsuActivity</string>
    <string name="title_activity_upt_usu">UptUsuActivity</string>
    <string name="title_activity_list_usu_param">ListUsuParamActivity</string>
    <string name="title_activity_add_livro">AddLivroActivity</string>
    <string name="title_activity_list_livro">ListLivroActivity</string>
    <string name="title_activity_list_livro_param">ListLivroParamActivity</string>
    <string name="title_activity_upt_livro">UptLivroActivity</string>
    <string name="usuariologadowill"></string>
</resources>